--- a/AndroidManifest.xml
+++ b/AndroidManifest.xml
@@ -27,6 +27,10 @@
             android:name="com.example.test.NextActivity"
             android:label="@string/title_activity_main" >
         </activity>
+        <activity
+            android:name="com.example.test.SexActivity"
+            android:label="@string/title_activity_main" >
+        </activity>
     </application>
 
 </manifest>
