--- a/bin/AndroidManifest.xml
+++ b/bin/AndroidManifest.xml
@@ -13,7 +13,7 @@
         android:allowBackup="true"
         android:icon="@drawable/ic_launcher"
         android:label="@string/app_name"
-        android:theme="@style/AppTheme" >
+        android:theme="@android:style/Theme.NoTitleBar" >
         <activity
             android:name="com.example.test.MainActivity"
             android:label="@string/title_activity_main" >
@@ -25,6 +25,10 @@
         </activity>
         <activity
             android:name="com.example.test.NextActivity"
+            android:label="@string/title_activity_main" >
+        </activity>
+        <activity
+            android:name="com.example.test.SexActivity"
             android:label="@string/title_activity_main" >
         </activity>
     </application>
