--- a/AndroidManifest.xml
+++ b/AndroidManifest.xml
@@ -15,13 +15,17 @@
         android:label="@string/app_name"
         android:theme="@android:style/Theme.NoTitleBar" >
         <activity
-            android:name="com.example.test.MainActivity"
+            android:name="com.example.test.StartActivity"
             android:label="@string/title_activity_main" >
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
 
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
+        </activity>
+        <activity
+            android:name="com.example.test.MainActivity"
+            android:label="@string/title_activity_main" >
         </activity>
         <activity
             android:name="com.example.test.NextActivity"
